<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notifications">

        <SwitchPreferenceCompat
            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/date_format"
        android:key="date_format">

        <CheckBoxPreference
            android:key="date_format_standard"
            android:title="@string/standard_format_title"
            android:summary="@string/standard_format_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="date_format_long"
            android:title="@string/full_format_title"
            android:summary="@string/full_format_summary" />

    </PreferenceCategory>

</PreferenceScreen>